# first-starfyre-app

./: README.md  __init__.fyre  footer.fyre  parent.fyre  pyproject.toml  store.fyre
