[tool.poetry]
name = "test-starfyre"
version = "0.1.0"
description = ""
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
readme = "README.md"
packages = [{include = "test_starfyre"}]

[tool.poetry.dependencies]
python = "^3.10"
starfyre = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
